--- a/.gitignore
+++ b/.gitignore
@@ -71,8 +71,8 @@ docs/_build/
 target/
 
 # Jupyter Notebook
-.ipynb_checkpoints
-
+*.ipynb_checkpoints
+*.ipynb
 # pyenv
 .python-version
 
@@ -105,3 +105,6 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+#models
+*.model
